force-app/main/default/objects/Quote/fields/ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDate__c</fullName>
    <label>有効期限</label>
    <length>20</length>
    <type>Text</type>
</CustomField>