force-app/main/default/objects/Quote/fields/QuoteDate__c.field-meta.xml
<CustomField>
    <fullName>QuoteDate__c</fullName>
    <label>見積日</label>
    <type>Date</type>
</CustomField>