force-app/main/default/objects/Quote/fields/QuoteNumber__c.field-meta.xml
<CustomField>
    <fullName>QuoteNumber__c</fullName>
    <displayFormat>Q{YYYY}{MM}{DD}-{000}</displayFormat>
    <label>見積番号</label>
    <type>AutoNumber</type>
</CustomField>