force-app/main/default/objects/Quote/fields/TaxType__c.field-meta.xml
<CustomField>
    <fullName>TaxType__c</fullName>
    <label>消費税タイプ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>税込</fullName>
                <default>true</default>
                <label>税込</label>
            </value>
            <value>
                <fullName>税抜</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>